[package]
name = "cobb"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
debug = true
panic = "abort"
